Improve
- implement DirView/AppLauncher/AlbumView focus()
- fix attachFrom behaving like syncFrom
- create pane() factory
- create Component.focus() instead of Widget.focus()
- remove all custom Tuples (use data classes where necessary)
- remove Logger widget unused classes
- port Picker to Kotlin
- port Layouter to Kotlin
- port ContainerNode
- port ContainerPicker && AltState to Kotlin
- change Screen.ordinal implementation (experimental)